--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,14 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "chrono": "cpp",
+        "forward_list": "cpp",
+        "functional": "cpp",
+        "iomanip": "cpp",
+        "list": "cpp",
+        "ratio": "cpp",
+        "unordered_map": "cpp",
+        "xhash": "cpp"
     }
 }
